--- a/build.properties
+++ b/build.properties
@@ -1,5 +1,9 @@
 buildname=i_pool
 
+build_manifest_name=/org/adligo/i/pool
+build_manifest_extension_name=org.adligo.i.pool
+build_manifest_implementation_title=org.adligo.i.pool
+
 build_classpath=${adi};\n\r\
 ${adig};\n\r\
 ${i_util};\n\r\
