--- a/build.properties
+++ b/build.properties
@@ -4,8 +4,8 @@ build_manifest_name=/org/adligo/i/pool
 build_manifest_extension_name=org.adligo.i.pool
 build_manifest_implementation_title=org.adligo.i.pool
 
-build_classpath=${adi};\n\r\
-${adig};\n\r\
+build_classpath=${i_adi};\n\r\
+${i_adig};\n\r\
 ${i_util};\n\r\
 ${models_core};\n\r\
 ${i_log};
