--- a/build.properties
+++ b/build.properties
@@ -1,8 +1,6 @@
 buildname=i_pool
 
-build_manifest_name=/org/adligo/i/pool
-build_manifest_extension_name=org.adligo.i.pool
-build_manifest_implementation_title=org.adligo.i.pool
+build_namespace=org.adligo.i.pool
 
 build_classpath=${i_adi};\n\r\
 ${i_adig};\n\r\
