--- a/.classpath
+++ b/.classpath
@@ -2,10 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/i_log"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/i_util"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/models_core"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/i_adi"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/i_adig"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/i_log.adligo.org"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/i_util.adligo.org"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/models_core.adligo.org"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/i_adi.adligo.org"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/i_adig.adligo.org"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
